# mu2edaq-trigger-scalers

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  Summary.md  bootstrap.sh  build.md  start-mu2edaq-trigger-scalers.sh  stop-mu2edaq-trigger-scalers.sh
.github/workflows/: cmake-single-platform.yml
config/: green_config.yaml  scalars.yaml
docs/man/: trigger-scalers.1  udp-sender.1  zmq-sender.1
src/: main.cpp
src/config/: Config.cpp  Config.h
src/gui/: ColorScheme.h  MainWindow.cpp  MainWindow.h  ScalarBank.cpp  ScalarBank.h  ScalarWidget.cpp  ScalarWidget.h
src/network/: TriggerMessage.h  UdpReceiver.cpp  UdpReceiver.h  ZmqReceiver.cpp  ZmqReceiver.h
tools/: SimulatedTriggers.h  udp_sender.cpp  zmq_sender.cpp
